tests/rosetta/out/Smalltalk/100-doors-2.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T11:38:51Z
"
| door incrementer current line |
door := 1.
incrementer := 0.
1 to: 101 do: [:current |.
line := (((('Door ') + ((current asString)))) + (' ')).
((current = door)) ifTrue: [.
line := (line + 'Open').
incrementer := (incrementer + 1).
door := (((door + ((2 * incrementer)))) + 1).
] ifFalse: [.
line := (line + 'Closed').
].
Transcript show: (line) printString; cr.
].
.
